Fix filename casing

--- a/docs/_posts/2023-12-31-neon.md
+++ b/docs/_posts/2023-12-31-neon.md
@@ -7,7 +7,7 @@ header:
   teaser: /assets/neon.png
 excerpt: "Solblekt tekno"
 ---
-![NEON Omslag](/assets/neon.png){:width="300"}<br>
+![NEON Omslag](../assets/neon.png){:width="300"}<br>
     [Spotify ](https://open.spotify.com/album/0J8jHKH3l0zbUV6FPS5tLd)|[ Apple music ](https://music.apple.com/se/album/neon-single/1724041381)|[ Tidal](https://listen.tidal.com/album/338135159)
 
 NEON är solblekt tekno ursprungligen spelad live på KMH.
